tests/ui/warn_no_tail_bob.stderr
error: unexpected end of macro invocation
  --> tests/ui/warn_no_tail_bob.rs:16:17
   |
 5 | #[bobtail::bob]
   | --------------- when calling this macro
...
16 |     let _ = f!(1);
   |                 ^ missing tokens in macro arguments
   |
note: while trying to match `,`
  --> tests/ui/warn_no_tail_bob.rs:5:1
   |
 5 | #[bobtail::bob]
   | ^^^^^^^^^^^^^^^
   = note: this error originates in the attribute macro `bobtail::bob` (in Nightly builds, run with -Z macro-backtrace for more info)
